--- a/app.css
+++ b/app.css
@@ -8,7 +8,12 @@ body {
     font-size: 50px;
     margin: 20px;
 }
-  
+
+.description {
+    text-align: center;
+    margin: 20px;
+}
+
 h3 {
     /* display: block; */
     text-align: center;
@@ -46,7 +51,12 @@ button {
     height: 500px;
     border: solid 1px;
     margin: auto
+    /* position: absolute; */
 } 
+
+#task1 {
+    background-color: lightpink;
+}
 
 .task {
     background-color: white;
