--- a/app.css
+++ b/app.css
@@ -15,12 +15,14 @@ body {
 }
 
 h3 {
-    /* display: block; */
     text-align: center;
     padding: none;
 } 
   
 input {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100px;
     text-align: center;
 }
@@ -32,7 +34,6 @@ input {
 }
   
 button {
-    /* display: block; */
     margin: 10px;
 }
   
@@ -48,21 +49,22 @@ button {
 .block {
     width: 30%;
     justify-content: space-around;
+    align-items: center;
     height: 500px;
     border: solid 1px;
-    margin: auto
-    /* position: absolute; */
+    margin: auto;
 } 
 
-#task1 {
-    background-color: lightpink;
-}
-
 .task {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
     background-color: white;
-    margin: 0.2rem 0.2rem 0.3rem 0.2rem;
+    margin: auto;
+    margin-bottom: 10px;
+    align-items: center;
+    justify-content: space-around;
     border: 0.1rem solid black;
     border-radius: 0.2rem;
-    padding: 0.5rem 0.2rem 0.5rem 2rem;
     height: 40px;
 }
